--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "php-mqtt/client": "^2.1"
+        "maatwebsite/excel": "^3.1",
+        "php-mqtt/client": "^2.1",
+        "yajra/laravel-datatables": "11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
